{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 323,
  "lineage": "aad31753-01e3-4c11-6f04-fdd96cb3193f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_ops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:605737371340:security-group/sg-0c57f7557166fe4d8",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c57f7557166fe4d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_ops_sg",
            "name_prefix": "",
            "owner_id": "605737371340",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_ops_sg",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev_ops_sg",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfd8b14d0e391daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpcs.vpc_info",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0194c3e07668a7e36",
            "arn": "arn:aws:ec2:eu-west-2:605737371340:instance/i-0de897ebff30b666b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de897ebff30b666b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev_ops_pub_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-073a0a8571678f9ab",
            "private_dns": "ip-10-10-11-7.eu-west-2.compute.internal",
            "private_ip": "10.10.11.7",
            "public_ip": "18.134.249.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3af2d2a091a58b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f830a92838f56b56",
            "tags": {
              "Name": "my-ec2-cluster",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "my-ec2-cluster",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "my-ec2-cluster"
            },
            "vpc_security_group_ids": [
              "sg-0c57f7557166fe4d8"
            ]
          },
          "dependencies": [
            "aws_key_pair.dev_ops_pub_key",
            "aws_security_group.dev_ops_sg",
            "data.aws_vpcs.vpc_info",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.aws_vpc_endpoint.appstream",
            "module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.aws_vpc_endpoint.config",
            "module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.aws_vpc_endpoint.events",
            "module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.data.aws_vpc_endpoint_service.appstream",
            "module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.data.aws_vpc_endpoint_service.transferserver"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:605737371340:internet-gateway/igw-094b55c1862116eaa",
            "id": "igw-094b55c1862116eaa",
            "owner_id": "605737371340",
            "tags": {
              "Name": "dev_ops_vpc",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev_ops_vpc",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cfd8b14d0e391daf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-094b55c1862116eaa",
            "id": "r-rtb-09c44edf12b6ad6f71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09c44edf12b6ad6f7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:605737371340:route-table/rtb-09c44edf12b6ad6f7",
            "id": "rtb-09c44edf12b6ad6f7",
            "owner_id": "605737371340",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev_ops_vpc-public",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev_ops_vpc-public",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cfd8b14d0e391daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9353eb500601bed",
            "route_table_id": "rtb-09c44edf12b6ad6f7",
            "subnet_id": "subnet-0f830a92838f56b56"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:605737371340:subnet/subnet-0f830a92838f56b56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.11.0/28",
            "id": "subnet-0f830a92838f56b56",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605737371340",
            "tags": {
              "Name": "dev_ops_vpc-public-eu-west-2a",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev_ops_vpc-public-eu-west-2a",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "vpc_id": "vpc-0cfd8b14d0e391daf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:605737371340:vpc/vpc-0cfd8b14d0e391daf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.11.0/28",
            "default_network_acl_id": "acl-0d3e7a0cd7cc29d3b",
            "default_route_table_id": "rtb-016b93ffe3a2e6e68",
            "default_security_group_id": "sg-09bdcad45d51d5bd1",
            "dhcp_options_id": "dopt-26f7f44e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cfd8b14d0e391daf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-016b93ffe3a2e6e68",
            "owner_id": "605737371340",
            "tags": {
              "Name": "dev_ops_vpc",
              "project": "dev_ops_cours",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev_ops_vpc",
              "project": "dev_ops_cours",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}